Начал делать сетки

--- a/source/less/blocks/advantages.less
+++ b/source/less/blocks/advantages.less
@@ -1,5 +1,14 @@
 .advantages{
+  width: 320px;
+  margin: 0 auto;
   background-color: @gray;
+}
+
+.advantages__item{
+  width: 255px;
+  margin: 0 auto;
+  text-align: center;
+  text-transform: uppercase;
 }
 
 .advantages__title{
