--- a/source/less/blocks/order.less
+++ b/source/less/blocks/order.less
@@ -1,12 +1,27 @@
 .order{
+  width: 320px;
+  margin: 0 auto;
 }
 
 .order__title{
+  width: 218px;
+  margin: 0 auto;
   font-size: 18px;
   line-height: 26px;
   font-weight: 700;
+  text-align: center;
+  text-transform: uppercase;
 }
 
 .order__text{
+  width: 265px;
+  margin: 0 auto;
   line-height: 24px;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.order__button{
+  display: block;
+  width: 280px;
 }
