--- a/source/less/blocks/post.less
+++ b/source/less/blocks/post.less
@@ -1,5 +1,12 @@
 .post{
+  width: 320px;
+  margin: 0 auto;
   background-color: @second-color;
+}
+
+.post__wrapper{
+  width: 280px;
+  margin: 0 auto;
 }
 
 .post__title{
@@ -7,12 +14,18 @@
   line-height: 26px;
   font-weight: 700;
   color: @main-color;
+  text-align: center;
+  text-transform: uppercase;
 }
 
 .post__index{
   color: @main-color;
+  text-align: center;
+  text-transform: uppercase;
 }
 
 .post__text{
   color: @main-color;
+  text-align: center;
+  text-transform: uppercase;
 }
