--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -1,15 +1,25 @@
 .promo{
+  width: 320px;
+  margin: 0 auto;
 }
 
 .promo__title{
+  width: 261px;
+  margin: 0 auto;
   font-size: 18px;
   line-height: 26px;
   font-weight: 700;
   color: @title-color;
+  text-align: center;
+  text-transform: uppercase;
 }
 
 .promo__text{
+  width: 255px;
+  margin: 0 auto;
   font-size: 14px;
   line-height: 26px;
   font-weight: 400;
+  text-align: center;
+  text-transform: uppercase;
 }
