--- a/source/less/blocks/realizer.less
+++ b/source/less/blocks/realizer.less
@@ -1,3 +1,13 @@
 .realizer{
+  display: flex;
+  justify-content: space-between;
+  width: 140px;
+  margin: 0 auto;
   line-height: 26px;
+  text-transform: uppercase;
+}
+
+.realizer__icon{
+  width: 32px;
+  color: transparent;
 }
