--- a/source/less/blocks/attributes.less
+++ b/source/less/blocks/attributes.less
@@ -1,8 +1,21 @@
 .attributes{
+  width: 320px;
+  margin: 0 auto;
+}
+
+.attributes__item{
+  width: 220px;
+  margin: 0 auto;
 }
 
 .attributes__title{
   font-size: 18px;
   line-height: 26px;
   font-weight: 700;
+  text-transform: uppercase;
+}
+
+.attributes__text{
+  width: 213px;
+  text-transform: uppercase;
 }
