--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -1,8 +1,13 @@
 .page-footer{
+  width: 320px;
+  margin: 0 auto;
 }
 
 .page-footer__hashtag{
+  width: 140px;
+  margin: 0 auto;
   font-size: 21px;
   line-height: 26px;
   font-weight: 700;
+  text-transform: uppercase;
 }
