--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -1,6 +1,15 @@
 .social{
+  display: flex;
+  justify-content: space-between;
+  width: 156px;
+  margin: 0 auto;
 }
 
 .social__item{
+  display: block;
+  width: 46px;
+  height: 48px;
+  margin: 0;
+  color: transparent;
   background-color: @second-color;
 }
