--- a/source/less/style.less
+++ b/source/less/style.less
@@ -8,6 +8,7 @@
 @import "blocks/content.less";
 @import "blocks/failur-popup.less";
 @import "blocks/form-list.less";
+@import "blocks/gallery.less";
 @import "blocks/main-nav.less";
 @import "blocks/map.less";
 @import "blocks/media-post.less";
