--- a/source/less/blocks/characterization.less
+++ b/source/less/blocks/characterization.less
@@ -1,14 +1,68 @@
 .characterization{
+  width: 320px;
+  margin: 0 auto;
+  padding-top: 23px;
+  padding-bottom: 25px;
 }
 
 .characterization__title{
+  width: 238px;
+  margin-top: 0;
+  margin-bottom: 22px;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 18px;
+  line-height: 26px;
+  font-weight: 700;
+  text-transform: uppercase;
+}
+
+.characterization__wrapper{
+  width: 280px;
+}
+
+.characterization__label{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-left: 21px;
   font-size: 18px;
   line-height: 26px;
   font-weight: 700;
 }
 
-.characterization__label{
-  font-size: 18px;
-  line-height: 26px;
-  font-weight: 700;
+.characterization__label:not(:last-child){
+  margin-bottom: 15px;
+}
+
+.characterization__label::before{
+  content: "";
+  display: inline-block;
+  width: 20px;
+  height: 20px;
+  margin-right: 20px;
+  background-color: #f2f2f2;
+  border: 17px solid #f2f2f2;
+  border-radius: 50%;
+  cursor: pointer;
+}
+
+.characterization__input{
+  display: none;
+}
+
+.characterization__input:checked + .characterization__label::before{
+  background-color: #333333;
+  background-clip: content-box;
+}
+
+@media (min-width: @tablet-width){
+  .characterization{
+    order: -5;
+  }
+  
+  .characterization__title{
+    width: 280px;
+    font-size: 21px;
+  }
 }
