--- a/source/less/blocks/check-list.less
+++ b/source/less/blocks/check-list.less
@@ -1,14 +1,91 @@
 .check-list{
+  width: 320px;
+  margin: 0 auto;
+  padding-top: 24px;
+  padding-bottom: 25px;
 }
 
 .check-list__title{
+  width: 243px;
+  margin-top: 0;
+  margin-bottom: 17px;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 18px;
+  line-height: 26px;
+  font-weight: 700;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.check-list__label{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin-left: 20px;
   font-size: 18px;
   line-height: 26px;
   font-weight: 700;
 }
 
-.check-list__label{
-  font-size: 18px;
-  line-height: 26px;
-  font-weight: 700;
+.check-list__label:not(:last-child){
+  margin-bottom: 24px;
+}
+
+.check-list__label::before{
+  content: "";
+  display: inline-block;
+  width: 56px;
+  height: 56px;
+  margin-right: 21px;
+  background-color: #f2f2f2;
+  cursor: pointer;
+}
+
+.check-list__input{
+  display: none;
+}
+
+@media (min-width: @tablet-width){
+  .check-list{
+    order: -2;
+    width: 768px;
+  }
+  
+  .check-list__title{
+    width: 284px;
+    font-size: 21px;
+  }
+  
+  .check-list__wrapper{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    width: 465px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
+  .check-list__label{
+    width: 205px;
+    margin-bottom: 24px;
+  }
+}
+
+@media (min-width: @desctop-width){
+  .check-list{
+    width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
+  .check-list__wrapper{
+    width: 963px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
+  .check-list__label{
+    margin-left: 0;
+  }
 }
