--- a/source/less/blocks/map.less
+++ b/source/less/blocks/map.less
@@ -7,3 +7,21 @@
   width: 320px;
   height: 350px;
 }
+
+@media (min-width: @tablet-width){
+  .map{
+    width: 768px;
+    height: 350px
+  }
+  
+  .map__img{
+    width: 100%;
+    height: 100%;
+  }
+}
+
+@media (min-width: @desctop-width){
+  .map{
+    width: 1200px;
+  }
+}
