--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -1,13 +1,42 @@
 .page-footer{
+  display: flex;
+  flex-direction: column;
   width: 320px;
   margin: 0 auto;
+  padding-top: 8px;
+  padding-bottom: 28px;
 }
 
 .page-footer__hashtag{
   width: 140px;
-  margin: 0 auto;
+  margin-bottom: 37px;
+  margin-left: auto;
+  margin-right: auto;
   font-size: 21px;
   line-height: 26px;
   font-weight: 700;
   text-transform: uppercase;
 }
+
+@media (min-width: @tablet-width){
+  .page-footer{
+    display: flex;
+    flex-direction: row;
+    width: 768px;
+    padding-top: 25px;
+    padding-bottom: 20px;
+  }
+  
+  .page-footer__hashtag{
+    height: 20px;
+    margin-top: 22px;
+    margin-bottom: 0;
+  }
+}
+
+@media (min-width: @desctop-width){
+  .page-footer{
+    width: 1200px;
+  }
+}
+
