--- a/source/less/blocks/realizer.less
+++ b/source/less/blocks/realizer.less
@@ -2,7 +2,10 @@
   display: flex;
   justify-content: space-between;
   width: 140px;
-  margin: 0 auto;
+  margin-top: 23px;
+  margin-bottom: 0;
+  margin-left: auto;
+  margin-right: auto;
   line-height: 26px;
   text-transform: uppercase;
 }
@@ -10,4 +13,15 @@
 .realizer__icon{
   width: 32px;
   color: transparent;
+  background-image: url(../../img/htmlacademy.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+@media (min-width: @tablet-width){
+  .realizer{
+    height: 38px;
+    margin-top: 24px;
+    margin-bottom: 0;
+  }
 }
