--- a/source/less/blocks/review.less
+++ b/source/less/blocks/review.less
@@ -1,12 +1,53 @@
 .review{
+  width: 320px;
+  margin: 0 auto;
+  padding-top: 39px;
+  padding-bottom: 23px;
 }
 
 .review__title{
+  width: 205px;
+  margin-top: 0;
+  margin-bottom: 28px;
+  margin-left: auto;
+  margin-right: auto;
   font-size: 18px;
   line-height: 26px;
   font-weight: 700;
+  text-align: center;
+  text-transform: uppercase;
 }
 
 .review__text{
+  width: 280px;
+  margin: 0 auto;
   line-height: 24px;
+  text-align: center;
+  text-transform: uppercase;
+}
+
+@media (min-width: @tablet-width){
+  .review{
+    order: -6;
+    width: 768px;
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
+  .review__title{
+    width: 325px;
+    font-size: 30px;
+  }
+  
+  .review__text{
+    width: 445px;
+  }
+}
+
+@media (min-width: @desctop-width){
+  .review{
+    width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
