--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -2,7 +2,10 @@
   display: flex;
   justify-content: space-between;
   width: 156px;
-  margin: 0 auto;
+  margin-top: -2px;
+  margin-bottom: 20px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .social__item{
@@ -12,4 +15,30 @@
   margin: 0;
   color: transparent;
   background-color: @second-color;
+}
+
+.social--twitter{
+  background-image: url(../../img/icon-twitter.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.social--facebook{
+  background-image: url(../../img/icon-facebook.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+.social--youtube{
+  background-image: url(../../img/icon-youtube.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+@media (min-width: @tablet-width){
+  .social{
+    height: 50px;
+    margin-top: 12px;
+    margin-bottom: 0;
+  }
 }
